# VPN_APP

./: APP_IP_QUICK_FIX.md  COMPLETE_VPN_SELECTION_FIX.md  DISCONNECTION_FIX_COMPLETE.md  EC2_API_INTEGRATION_GUIDE.md  FIX_VPN_SELECTION_PERSISTENCE.md  IP_CHANGE_SOLUTION_FINAL.md  MULTI_VENDOR_VPN_GUIDE.md  NATIVE_INTEGRATION_GUIDE.md  README_IMPLEMENTATION_COMPLETE.md  README_SOFTETHER_ANDROID.md  REAL_IP_CHANGE_EXPLAINED.md  SOFTETHER_CONNECTION_FIX_FINAL.md  SOFTETHER_DISCONNECT_AND_IP_FIX.md  SOFTETHER_IMPLEMENTATION_SUMMARY.md  SOFTETHER_NATIVE_IMPLEMENTATION_COMPLETE.md  SOFTETHER_NATIVE_SUPPORT_QUICK_START.md  VERIFICATION_CHECKLIST.md  pubspec.yaml  test_regex.dart
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  softether_jni.cpp
ios/Runner/: AppDelegate.swift
lib/features/connection/domain/: connection_quality_controller.dart
lib/features/home/: home_screen.dart
lib/features/servers/data/: local_server_provider.dart  (+2 more)
lib/l10n/: app_localizations.dart
lib/platform/: softether_channel.dart
lib/platform/android/: extend_intent_handler.dart
lib/services/notifications/: session_notification_service.dart
lib/services/speedtest/: ndt7_service.dart
lib/services/vpn/: openvpn_engine.dart  openvpn_port.dart  softether_port.dart  vpn_selection_provider.dart
lib/theme/: theme.dart
lib/widgets/: home_status_widget.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
test/: widget_test.dart
test/services/time/: session_clock_test.dart
test/services/vpn/: openvpn_port_test.dart
(+16 files in other folders)
